@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/psh/psh-1.8.ebuild,v 1.2 2003/07/02 12:47:28 aliz Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/psh/psh-1.8.ebuild,v 1.3 2004/02/06 21:15:08 agriffis Exp $
 
 inherit perl-module
 
@@ -10,7 +10,8 @@ SRC_URI="http://www.focusresearch.com/gregor/psh/${P}.tar.gz"
 HOMEPAGE="http://www.focusresearch.com/gregor/psh/"
 LICENSE="Artistic | GPL-2"
 SLOT="0"
-KEYWORDS="x86 ~ppc ~sparc ~alpha"
+KEYWORDS="x86 ~ppc ~sparc alpha ia64"
 
 DEPEND=">=dev-lang/perl-5"
 
+myinst="SITEPREFIX=${D}/usr"
