@@ -1,6 +1,9 @@
 # ChangeLog for app-shells/psh
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/psh/ChangeLog,v 1.9 2003/05/07 01:44:56 agriffis Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-shells/psh/ChangeLog,v 1.10 2004/02/06 21:15:08 agriffis Exp $
+
+  06 Feb 2004; Aron Griffis <agriffis@gentoo.org> psh-1.8.ebuild:
+  Mark stable on alpha and ia64; fix bug 33406 by setting myinst
 
 *psh-1.8 (06 May 2003)
 
